[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/arms.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/legs.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/torso.tscn" type="PackedScene" id=3]
[ext_resource path="res://code/fps.gd" type="Script" id=13]
[ext_resource path="res://scenes/health_balls.tscn" type="PackedScene" id=14]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 4.58928, 1 )

[node name="Player" type="KinematicBody"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
script = ExtResource( 13 )

[node name="torso" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 7.04083, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.52288, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.5805, 0 )

[node name="Camera2" type="Camera" parent="Head"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 1.419, -1.548 )

[node name="arms" parent="Head" instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, -10.54, -2.69458 )

[node name="health_rotate" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16.5767, 0 )

[node name="health1" parent="health_rotate" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.75168 )

[node name="health2" parent="health_rotate" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.88219, 0, 0 )

[node name="health3" parent="health_rotate" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06399, 0, 0 )

[node name="colour_change" type="Timer" parent="."]
wait_time = 0.5

[node name="groundcheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.114749, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="legs" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.155292, 0 )

[connection signal="timeout" from="colour_change" to="." method="_on_colour_change_timeout"]
